# Project-Atlas

./: .env.example  .gitignore  Dockerfile.backend  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: health.py
backend/app/infrastructure/cache/: redis.py
backend/app/infrastructure/database/: session.py
frontend/: Dockerfile
