[project]
name = "project-atlas"
version = "1.0.0-alpha"
description = "Real Estate Intelligence Platform"
requires-python = ">=3.12"
authors = [
    { name = "Project Atlas Team" }
]

# ============================================
# Ruff (Linter & Formatter)
# ============================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by black/ruff format)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ============================================
# Black (Formatter)
# ============================================
[tool.black]
line-length = 100
target-version = ["py312"]

# ============================================
# Mypy (Type Checker)
# ============================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

# ============================================
# Pytest (Testing)
# ============================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

# ============================================
# Coverage (Test Coverage)
# ============================================
[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "alembic/*",
    "*/migrations/*"
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]